# gifdecoder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  license_header.txt  local.properties  settings.gradle  settings.gradle.kts
.github/workflows/: pre-merge.yml  publish.yml
android/: build.gradle
android-drawable/: README.md  build.gradle.kts  local.properties
android-drawable-native/: build.gradle.kts
android-drawable-native/src/main/: AndroidManifest.xml
android-drawable/src/main/: AndroidManifest.xml
android/src/androidTest/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
android/src/main/res/layout/: activity_main.xml
android/src/main/res/values/: strings.xml  themes.xml
android/src/main/res/values-night/: themes.xml
archive/: domo.aseprite  simple-nopalette.aseprite  timers.aseprite
benchmark/: build.gradle
benchmark/src/androidTest/: AndroidManifest.xml
benchmark/src/main/: AndroidManifest.xml
buildSrc/src/main/kotlin/: Dependencies.kt  Publication.kt  Versions.kt
decoder/: README.md  build.gradle.kts  settings.gradle.kts
decoder/buildSrc/: build.gradle.kts
decoder/buildSrc/src/main/kotlin/: Configuration.kt
decoder/dokka/: module.md
docs/: GIF87a.txt  GIF89a.txt  NETSCAPE2.0.txt
giflzwdecoder/: Cargo.toml
giflzwdecoder/ndkheaders/: bitmap.h
giflzwdecoder/src/: lib.rs
giflzwdecoder/src/android/: graphics.rs
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
src/main/kotlin/net/redwarp/gif/decoder/: GifBuffer.kt  (+4 more)
(+155 files in other folders)
