[package]
name = "giflzwdecoder"
version = "0.1.0"
authors = ["Benoit Vermont <redwarp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
jni = "0.18.0"

[lib]
crate_type = ["staticlib", "dylib"]

[profile.release]
lto = true
